--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,11 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
 
         php:
-          - "7.4"
-          - "8.0"
-          - "8.1"
-          
+          - "8.2"
+          - "8.3"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -69,7 +67,7 @@ jobs:
           restore-keys: |
             php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
 
-      - name: Install dependencies with composer php PHP [5.6 - 8.0]
+      - name: Install dependencies with composer
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Run tests with codeception
